--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "cpp"
     id "visual-studio"
-    id "jaci.openrio.gradle.GradleRIO" version "2018.01.22"
+    id "jaci.openrio.gradle.GradleRIO" version "2018.01.07"
 }
 
 def TEAM = 4056
@@ -40,11 +40,12 @@ model {
                     include '**/*.hpp', '**/*.h'
                 }
 
-                // Define my dependencies. In this case, WPILib (+ friends), CTRE Phoenix (Talon SRX) and NavX.
+                // Define my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX) and NavX.
                 lib library: "wpilib"
                 lib library: "ctre"
                 lib library: "navx"
                 lib library: "openrio.powerup.matchData"
+                lib library: "pathfinder"
             }
         }
     }
