--- a/frcUserProgramExe.vcxproj
+++ b/frcUserProgramExe.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="15.0">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="debug|Win32">
@@ -21,31 +21,49 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|Win32'">
+    <IncludePath>E:\FRC\Projects\PowerUpBot-CPP\src;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <PropertyGroup Label="NMakeConfiguration" Condition="'$(Configuration)|$(Platform)'=='debug|Win32'">
     <NMakeBuildCommandLine>gradlew.bat :installFrcUserProgramExecutable</NMakeBuildCommandLine>
     <NMakeCleanCommandLine>gradlew.bat :clean</NMakeCleanCommandLine>
     <NMakeReBuildCommandLine>gradlew.bat :clean :installFrcUserProgramExecutable</NMakeReBuildCommandLine>
     <NMakePreprocessorDefinitions>
     </NMakePreprocessorDefinitions>
-    <NMakeIncludeSearchPath>src;build\tmp\expandedArchives\wpilibc-2018.2.2-headers.zip_2b481ef032541827aa05d34c722e7cda;build\tmp\expandedArchives\hal-2018.2.2-headers.zip_eb4bfce635b238c6934d705223ab1444;build\tmp\expandedArchives\wpiutil-cpp-3.0.0-headers.zip_71db4973bf73247f06ec3fdb86e1126b;build\tmp\expandedArchives\ntcore-cpp-4.0.0-headers.zip_517391151665b6a51f10f788c06ee62d;build\tmp\expandedArchives\cscore-cpp-1.1.0-headers.zip_7179d2a404841338b55673d83c119071;build\tmp\expandedArchives\opencv-cpp-3.2.0-headers.zip_1b8591564854592a4aff6bd224b2b0a3;build\tmp\expandedArchives\ni-libraries-2018.2.2-headers.zip_6aedc4b55a982775a7b6e16df1020d5b;build\tmp\expandedArchives\CTRE-phoenix-cpp-5.2.1.1-headers.zip_ed51ae3396f2e2d306a9f6a233af2bce;build\tmp\expandedArchives\navx-cpp-3.0.346-headers.zip_bdc8378de58d7490d517245a513e81b3;build\tmp\expandedArchives\MatchData-2018.01.07-headers.zip_690b86dff7c45de52602c9654d059cf0</NMakeIncludeSearchPath>
+    <NMakeIncludeSearchPath>src\cpp;src\include;build\tmp\expandedArchives\wpilibc-2018.1.1-headers.zip_0ba004690f48207547fbbd2a6f212388;build\tmp\expandedArchives\hal-2018.1.1-headers.zip_4b49b4176ae22cb58a5421914aabf320;build\tmp\expandedArchives\wpiutil-cpp-3.0.0-headers.zip_71db4973bf73247f06ec3fdb86e1126b;build\tmp\expandedArchives\ntcore-cpp-4.0.0-headers.zip_517391151665b6a51f10f788c06ee62d;build\tmp\expandedArchives\cscore-cpp-1.1.0-headers.zip_7179d2a404841338b55673d83c119071;build\tmp\expandedArchives\opencv-cpp-3.2.0-headers.zip_1b8591564854592a4aff6bd224b2b0a3;build\tmp\expandedArchives\ni-libraries-2018.1.1-headers.zip_6aedc4b55a982775a7b6e16df1020d5b;build\tmp\expandedArchives\CTRE-phoenix-cpp-5.1.2.1-headers.zip_fff3d22e160106b698f6c35d0b2e8153;build\tmp\expandedArchives\navx-cpp-3.0.342-headers.zip_ded0b7831bcd4688d480db0d93158974;build\tmp\expandedArchives\MatchData-2018.01.07-headers.zip_690b86dff7c45de52602c9654d059cf0</NMakeIncludeSearchPath>
     <NMakeOutput>build\install\frcUserProgram\lib\frcUserProgram</NMakeOutput>
   </PropertyGroup>
   <ItemGroup Label="Sources">
     <ClCompile Include="build.gradle" />
+    <ClCompile Include="src\Commands\ReleaseOnce.cpp" />
+    <ClCompile Include="src\Commands\IntakeBinary.cpp" />
+    <ClCompile Include="src\Commands\LiftBinary.cpp" />
     <ClCompile Include="src\Commands\Drive\DriveJoystick.cpp" />
-    <ClCompile Include="src\Subsystems\Drivetrain.cpp" />
+    <ClCompile Include="src\cpp\Robot.cpp" />
+    <ClCompile Include="src\logging\Logger.cpp" />
     <ClCompile Include="src\OI.cpp" />
     <ClCompile Include="src\RoboMap.cpp" />
     <ClCompile Include="src\Robot.cpp" />
+    <ClCompile Include="src\Subsystems\Drivetrain.cpp" />
+    <ClCompile Include="src\victoryconnect\tcp\TCPClient.cpp" />
+    <ClCompile Include="src\victoryconnect\VictoryConnectClient.cpp" />
   </ItemGroup>
   <ItemGroup Label="Headers">
+    <ClInclude Include="src\Commands\ReleaseOnce.h" />
+    <ClInclude Include="src\Commands\IntakeBinary.h" />
+    <ClInclude Include="src\Commands\LiftBinary.h" />
     <ClInclude Include="src\Commands\Drive\DriveJoystick.h" />
-    <ClInclude Include="src\Subsystems\Drivetrain.h" />
     <ClInclude Include="src\include\MyHeader.h" />
+    <ClInclude Include="src\logging\Logger.h" />
+    <ClInclude Include="src\MyHeader.h" />
     <ClInclude Include="src\OI.h" />
     <ClInclude Include="src\Ports.h" />
     <ClInclude Include="src\RoboMap.h" />
     <ClInclude Include="src\Robot.h" />
+    <ClInclude Include="src\Subsystems\Drivetrain.h" />
+    <ClInclude Include="src\termcolor\termcolor.hpp" />
+    <ClInclude Include="src\victoryconnect\tcp\TCPClient.h" />
+    <ClInclude Include="src\victoryconnect\VictoryConnectClient.h" />
   </ItemGroup>
   <ItemGroup Label="References" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
