--- a/frcUserProgramExe.vcxproj
+++ b/frcUserProgramExe.vcxproj
@@ -22,19 +22,20 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|Win32'">
-    <IncludePath>E:\FRC\Projects\PowerUpBot-CPP\src;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)/src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Label="NMakeConfiguration" Condition="'$(Configuration)|$(Platform)'=='debug|Win32'">
-    <NMakeBuildCommandLine>gradlew.bat :installFrcUserProgramExecutable</NMakeBuildCommandLine>
+    <NMakeBuildCommandLine>gradlew.bat :build</NMakeBuildCommandLine>
     <NMakeCleanCommandLine>gradlew.bat :clean</NMakeCleanCommandLine>
     <NMakeReBuildCommandLine>gradlew.bat :clean :installFrcUserProgramExecutable</NMakeReBuildCommandLine>
     <NMakePreprocessorDefinitions>
     </NMakePreprocessorDefinitions>
-    <NMakeIncludeSearchPath>src\cpp;src\include;build\tmp\expandedArchives\wpilibc-2018.1.1-headers.zip_0ba004690f48207547fbbd2a6f212388;build\tmp\expandedArchives\hal-2018.1.1-headers.zip_4b49b4176ae22cb58a5421914aabf320;build\tmp\expandedArchives\wpiutil-cpp-3.0.0-headers.zip_71db4973bf73247f06ec3fdb86e1126b;build\tmp\expandedArchives\ntcore-cpp-4.0.0-headers.zip_517391151665b6a51f10f788c06ee62d;build\tmp\expandedArchives\cscore-cpp-1.1.0-headers.zip_7179d2a404841338b55673d83c119071;build\tmp\expandedArchives\opencv-cpp-3.2.0-headers.zip_1b8591564854592a4aff6bd224b2b0a3;build\tmp\expandedArchives\ni-libraries-2018.1.1-headers.zip_6aedc4b55a982775a7b6e16df1020d5b;build\tmp\expandedArchives\CTRE-phoenix-cpp-5.1.2.1-headers.zip_fff3d22e160106b698f6c35d0b2e8153;build\tmp\expandedArchives\navx-cpp-3.0.342-headers.zip_ded0b7831bcd4688d480db0d93158974;build\tmp\expandedArchives\MatchData-2018.01.07-headers.zip_690b86dff7c45de52602c9654d059cf0</NMakeIncludeSearchPath>
-    <NMakeOutput>build\install\frcUserProgram\lib\frcUserProgram</NMakeOutput>
+    <NMakeIncludeSearchPath>E:\Programs\FRC\Projects\PowerUpBot-CPP\build\tmp\expandedArchives\wpilibc-2018.1.1-headers.zip_0ba004690f48207547fbbd2a6f212388;src\cpp;src\include;build\tmp\expandedArchives\wpilibc-2018.1.1-headers.zip_0ba004690f48207547fbbd2a6f212388;build\tmp\expandedArchives\hal-2018.1.1-headers.zip_4b49b4176ae22cb58a5421914aabf320;build\tmp\expandedArchives\wpiutil-cpp-3.0.0-headers.zip_71db4973bf73247f06ec3fdb86e1126b;build\tmp\expandedArchives\ntcore-cpp-4.0.0-headers.zip_517391151665b6a51f10f788c06ee62d;build\tmp\expandedArchives\cscore-cpp-1.1.0-headers.zip_7179d2a404841338b55673d83c119071;build\tmp\expandedArchives\opencv-cpp-3.2.0-headers.zip_1b8591564854592a4aff6bd224b2b0a3;build\tmp\expandedArchives\ni-libraries-2018.1.1-headers.zip_6aedc4b55a982775a7b6e16df1020d5b;build\tmp\expandedArchives\CTRE-phoenix-cpp-5.1.2.1-headers.zip_fff3d22e160106b698f6c35d0b2e8153;build\tmp\expandedArchives\navx-cpp-3.0.342-headers.zip_ded0b7831bcd4688d480db0d93158974;build\tmp\expandedArchives\MatchData-2018.01.07-headers.zip_690b86dff7c45de52602c9654d059cf0</NMakeIncludeSearchPath>
+    <NMakeOutput>gradlew.bat :deploy</NMakeOutput>
   </PropertyGroup>
   <ItemGroup Label="Sources">
     <ClCompile Include="build.gradle" />
+    <ClCompile Include="src\Commands\IntakeLock.cpp" />
     <ClCompile Include="src\Commands\ReleaseOnce.cpp" />
     <ClCompile Include="src\Commands\IntakeBinary.cpp" />
     <ClCompile Include="src\Commands\LiftBinary.cpp" />
@@ -49,6 +50,7 @@
     <ClCompile Include="src\victoryconnect\VictoryConnectClient.cpp" />
   </ItemGroup>
   <ItemGroup Label="Headers">
+    <ClInclude Include="src\Commands\IntakeLock.h" />
     <ClInclude Include="src\Commands\ReleaseOnce.h" />
     <ClInclude Include="src\Commands\IntakeBinary.h" />
     <ClInclude Include="src\Commands\LiftBinary.h" />
