--- a/frcUserProgramExe.vcxproj.filters
+++ b/frcUserProgramExe.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <ItemGroup Label="Filters">
     <Filter Include="Source Files">
@@ -54,16 +54,13 @@
     <ClCompile Include="src\Subsystems\Intake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Subsystems\NavX.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Subsystems\NetworkSubsystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\victoryconnect\tcp\TCPClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\victoryconnect\VictoryConnectClient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Commands\Intake\IntakeDeploy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,12 +113,6 @@
     <ClInclude Include="src\Subsystems\Intake.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Subsystems\NavX.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Subsystems\NetworkSubsystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\termcolor\termcolor.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -129,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\victoryconnect\VictoryConnectClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Commands\Intake\IntakeDeploy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
